html + css update

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ h1 {
 
 .skills {
   color: #FFFFFF;
-  margin: 250px auto 100px auto;
+  margin: 250px auto 0px auto;
   width: 1300px;
   height: 350px;
   background-color: #444444 ;
@@ -218,10 +218,11 @@ h1 {
   margin: 20px 20px 20px 1095px;
 } 
 
-.myprojects {
+.myprojects, .contactme {
   color: #FFFFFF;
   font-size: 35px;
   margin-left: 55px;
+  margin-top: 80px;
 }
 
 .devprojects {
@@ -242,5 +243,24 @@ h1 {
 .busan {
   width: 340px;
   height: 215px;
+  border-radius: 20px;
+}
+
+.mail, .telefone {
+  color: #FFFFFF;
+  margin-left: 60px;
+  margin-right: 300px;
+  text-align: center;
+}
+
+footer {
+  color: #FFFFFF;
+  margin-top: 100px;
+  margin-left: 60px;
+  background-color: #444444;
+  width: 1250px;
+  height: 20px;
+  text-align: center;
+  padding: 20px;
   border-radius: 20px;
 }
