--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav {
 .download {
   border-radius: 999px;
   padding: 10px;
-  margin: 0 300px 0 10px;
+  margin: 0 200px 0 10px;
   background-color: #000000;
 }
 
@@ -33,7 +33,7 @@ a {
 }
 
 h1 {
-  margin: 170px 0px 0px 170px;
+  margin: 170px 0px 0px 250px;
   font-size: 50px;
   color: #FFFFFF;
 }
@@ -45,31 +45,33 @@ h1 {
 .fotorafael {
   display: flex;
   position: absolute;
-  margin-left: 790px;
-  margin-top: 88px;
+  margin-left: 850px;
+  margin-top: 150px;
   border-radius: 9999px;
+  width: 400px;
 }
 
 .eclipse {
   display: flex;
   position: absolute;
-  margin-left: 720px;
-  margin-top: 10px;
+  margin-left: 800px;
+  margin-top: 95px;
   z-index: -1;
+  width: 500px;
 }
 
 .bemvindo {
   color: #FFFFFF;
   margin-top: 40px;
   width: 600px;
-  margin-left: 90px;
+  margin-left: 150px;
   text-align: justify;
 }
 
 .hireme {
   color:#FFFFFF;
   margin-top: 80px;
-  margin-left: 100px;
+  margin-left: 150px;
   margin-bottom: 60px;
   background-color: #444444;
   width: 140px;
@@ -114,7 +116,7 @@ h1 {
   color: #FFFFFF;
   margin: auto;
   width: 1300px;
-  height: 300px;
+  height: 250px;
   background-color: #444444 ;
   border-radius: 20px;
 }
@@ -124,7 +126,7 @@ h1 {
   font-size: 35px;
   padding-left: 20px;
   padding-top: 20px;
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 .p1 {
@@ -168,9 +170,9 @@ h1 {
 
 .skills {
   color: #FFFFFF;
-  margin: 250px auto 0px auto;
+  margin: 240px auto 0px auto;
   width: 1300px;
-  height: 350px;
+  height: 280px;
   background-color: #444444 ;
   border-radius: 20px;
 }
@@ -185,44 +187,51 @@ h1 {
   display: flex;
   position: absolute;
   margin: auto;
-  margin: 20px 20px 20px 5px;
+  margin: 20px 20px 20px 70px;
+  width: 150px;
 } 
 
 .css {
   display: flex;
   position: absolute;
-  margin: 20px 20px 20px 220px;
+  margin: 20px 20px 20px 270px;
+  width: 150px;
 } 
 
 .javascript {
   display: flex;
   position: absolute;
-  margin: 20px 20px 20px 440px;
+  margin: 20px 20px 20px 470px;
+  width: 150px;
 } 
 
 .vscode {
   display: flex;
   position: absolute;
-  margin: 20px 20px 20px 660px;
+  margin: 20px 20px 20px 670px;
+  width: 150px;
 } 
 
 .figma {
   display: flex;
   position: absolute;
-  margin: 20px 20px 20px 880px;
+  margin: 20px 20px 20px 870px;
+  width: 150px;
 } 
 
 .gitimg {
   display: flex;
   position: absolute;
-  margin: 20px 20px 20px 1095px;
+  margin: 20px 20px 20px 1070px;
+  width: 150px;
 } 
 
 .myprojects, .contactme {
   color: #FFFFFF;
   font-size: 35px;
   margin-left: 55px;
-  margin-top: 80px;
+  margin-top: 40px;
+  margin-bottom: 50px;
 }
 
 .devprojects {
@@ -246,12 +255,22 @@ h1 {
   border-radius: 20px;
 }
 
-.mail, .telefone {
+.mail {
   color: #FFFFFF;
   margin-left: 60px;
   margin-right: 150px;
-  text-align: center;
   width: 1250px;
+  background-color: #444444;
+  border-radius: 20px;
+  padding: 30px;
+}
+
+.telefone {
+  color: #FFFFFF;
+  margin-left: 600px;
+  background-color: #444444;
+  border-radius: 20px;
+  padding: 30px;
 }
 
 footer {
@@ -259,7 +278,7 @@ footer {
   margin-top: 100px;
   margin-left: 50px;
   background-color: #444444;
-  width: 1250px;
+  width: 1260px;
   height: 20px;
   text-align: center;
   padding: 20px;
